--- a/src/css/global.css
+++ b/src/css/global.css
@@ -4,4 +4,14 @@ body {
 
 main {
     min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #DADFE8;
+}
+
+.pokedex {
+    display: flex;
+    gap: 30px;
+    padding: 30px 0;
 }
